# sarpyx

./: .dockerignore  .gitignore  CITATION.cff  Dockerfile  Makefile  README.md  Singularity.def  entrypoint.sh  environment.yml  pyproject.toml
.agent-memory/: manifest.json
.agents/memory/: mistakes.md
.github/workflows/: docker.yml  publish.yml
conda/recipe/: meta.yaml
docs/: README.md  api_coverage_checklist.json  api_inventory_detailed.json  architecture.html  build_site.py  configuration.html  contributing.html  faq.html  figma_diagram_specs.json  generate_static_site.py  index.html  installation.html  makefile.md  quickstart.html  testing.html  usage.html
docs/_site/: index.html  makefile.html  metaParams.html
docs/api/: README.md  index.html  sarpyx___init__.html  sarpyx_cli___init__.html  sarpyx_cli_algorithms_AdaptiveThresholding.html  sarpyx_cli_algorithms___init__.html  sarpyx_cli_decode.html  sarpyx_cli_focus.html  sarpyx_cli_main.html  sarpyx_cli_merge_iq_into_pdec.html  sarpyx_cli_shipdet.html  sarpyx_cli_unzip.html  sarpyx_cli_upload.html  sarpyx_cli_utils.html  sarpyx_cli_worldsar.html  sarpyx_processor___init__.html  sarpyx_processor_algorithms___init__.html  sarpyx_processor_algorithms_backprojection.html  sarpyx_processor_algorithms_constants.html  sarpyx_processor_algorithms_mbautofocus.html  sarpyx_processor_algorithms_rda.html  sarpyx_processor_core___init__.html  sarpyx_processor_core_aux.html  sarpyx_processor_core_code2physical.html  sarpyx_processor_core_constants.html  sarpyx_processor_core_decode.html  sarpyx_processor_core_focus.html  sarpyx_processor_core_meta.html  sarpyx_processor_core_signal.html  sarpyx_processor_core_spectrum.html  sarpyx_processor_core_subaperture.html  sarpyx_processor_core_subaperture_full_img.html  sarpyx_processor_core_transforms.html  sarpyx_processor_core_utilis.html  sarpyx_processor_data___init__.html  sarpyx_processor_data_formatters.html  sarpyx_processor_data_readers.html  sarpyx_processor_data_writers.html  sarpyx_processor_utils___init__.html  sarpyx_processor_utils_mem.html  (+41 more)
notebooks/: open_zarr.ipynb  snapflow_insar.ipynb  snapflow_v2.ipynb
pyscripts/: worldsar-legacy.py  worldsar.py
sarpyx/: __init__.py
scripts/: download.sh  insar_pair.sh  install_conda.sh  main.sh  pbs_caller.sh  run_pipeline.sh  setvar.sh  setvars.sh  snap_userdir.sh  upload_sif.sh  worldsar.sh
tests/: test_cli_main.py  test_cli_pipeline.py  test_cli_worldsar.py  test_config_pipeline.py  test_docker.py  test_footprint_wkt.py  test_makefile_surface.py  test_pbs_caller.py  test_public_imports.py  test_sentinel_subap_pipeline.py  test_snap2stamps_double_product_pipeline.py  test_snapflow_engine.py  test_subap_envi.py  test_subap_feature_pipeline.py  test_subaperture_dask.py  test_worldsar_h5.py  test_worldsar_pipeline_definitions.py  test_worldsar_tsx.py  test_worldsar_zarr_hooks.py
(+243 files in other folders)
