[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sarpyx"
version = "1.0.2"
description = "A swissknife for SAR processing."
readme = { file = "README.md", content-type = "text/markdown" }
authors = [
    { name = "Roberto Del Prete", email = "roberto.delprete@esa.int" },
    { name = "Gabriele Daga" },
    { name = "Sebastian Fieldhouse" },
    { name = "Juanfrancisco Amieva" },
    { name = "Cedric Leonard" },
    { name = "Valerio Marsocci" },
    { name = "Eva Gmelich Mejling" },
]
license = "Apache-2.0"
requires-python = ">=3.11, <4"

dependencies = [
    "h5py>=3.11,<4",
    "numpy>=1.26,<3",
    "pandas>=2.2,<3",
    "pyproj>=3.6,<4",
    "rasterio>=1.4.4,<1.5; python_version < '3.12'",
    "rasterio>=1.5.0,<1.6; python_version >= '3.12'",
    "scipy>=1.11,<2",
    "shapely>=2,<3",
    "zarr>=3,<4",
]

[project.optional-dependencies]
copernicus = [
    "phidown>=0.1.26,<0.2",
]

geo = [
    "geographiclib>=2.1,<3",
    "geopandas>=1.1.1,<2",
    "tqdm>=4.66,<5",
]

hf = [
    "huggingface-hub>=0.34.1,<1",
    "python-dotenv>=1,<2",
]

io = [
    "fastparquet>=2025.12.0,<2027.0.0",
    "numcodecs>=0.15,<1",
    "openpyxl>=3.1,<4",
    "pyarrow>=23,<24",
    "pyyaml>=6.0.2,<7",
    "tifffile>=2025.6.11,<2027.0.0",
]

notebook = [
    "jupyter>=1.1.1,<2",
    "sarpyx[viz]",
]

processing = [
    "dask[array]>=2025.5.1,<2027.0.0",
    "joblib>=1.5.1,<2",
    "lxml>=5.4.0,<7",
    "numba>=0.60,<0.66",
    "psutil>=5.9,<8",
]

torch = [
    "kornia>=0.8.1,<1",
    "pytorch-msssim>=1,<2",
    "torch>=2.3,<3",
]

training = [
    "lightning>=2.5.3,<3",
    "sarpyx[torch]",
    "tensorboard>=2.20.0,<3",
    "tensorboardX>=2.6.4,<3",
    "wandb>=0.21.3,<1",
]

ml = [
    "einops>=0.8.1,<1",
    "opt-einsum>=3.4.0,<4",
    "pykeops>=2.3,<3",
    "sarpyx[training]",
    "scikit-image>=0.25.2,<1",
    "scikit-learn>=1.7.2,<2",
]

viz = [
    "adjustText>=1.4,<2",
    "folium>=0.20.0,<1",
    "matplotlib>=3.8,<4",
    "plotly>=6.2.0,<7",
    "seaborn>=0.13.2,<1",
]

all = [
    "sarpyx[copernicus,geo,hf,io,ml,notebook,processing,viz]",
]

[project.scripts]
sarpyx = "sarpyx.cli.main:main"
sarpyx-decode = "sarpyx.cli.legacy:decode_main"
sarpyx-focus = "sarpyx.cli.legacy:focus_main"
sarpyx-worldsar = "sarpyx.cli.worldsar:main"
sarpyx-pipeline = "sarpyx.cli.pipeline:main"
sarpyx-shipdet = "sarpyx.cli.legacy:shipdet_main"
sarpyx-unzip = "sarpyx.cli.legacy:unzip_main"
sarpyx-upload = "sarpyx.cli.legacy:upload_main"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["sarpyx*"]
namespaces = false

[dependency-groups]
dev = [
    "markdown>=3.10,<4",
    "pygments>=2.19,<3",
    "pytest==8.4.0",
    "sarpyx[geo,io,processing,torch,viz]",
]
